@@ -1,13 +1,8 @@
 package eco.ywhc.xr.core.util;
 
-import eco.ywhc.xr.common.constant.SessionAttribute;
-import eco.ywhc.xr.common.model.RequestContextUser;
-import jakarta.servlet.http.HttpSession;
-import org.springframework.web.context.request.RequestContextHolder;
-import org.springframework.web.context.request.ServletRequestAttributes;
+import eco.ywhc.xr.common.security.CurrentUser;
+import eco.ywhc.xr.common.security.SecurityContextHolder;
 
-import java.util.ArrayList;
-import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 
@@ -21,33 +16,19 @@ public class SessionUtils {
      * <p>
      * 需要确保用户已登录才可调用
      */
-    public static RequestContextUser currentUser() {
-        ServletRequestAttributes requestAttributes = (ServletRequestAttributes) RequestContextHolder.currentRequestAttributes();
-        HttpSession httpSession = requestAttributes.getRequest().getSession(false);
-        Object attribute = httpSession.getAttribute(SessionAttribute.SESSION_ATTR_USER);
-        return (RequestContextUser) attribute;
+    public static CurrentUser currentUser() {
+        return SecurityContextHolder.getContext().getCurrentUser();
     }
 
     /**
-     * 获取当前请求关联的用户信息
+     * 获取当前请求关联的用户的权限
      */
     public static List<String> currentUserPermissionCodes() {
-        ServletRequestAttributes requestAttributes = (ServletRequestAttributes) RequestContextHolder.currentRequestAttributes();
-        HttpSession httpSession = requestAttributes.getRequest().getSession(false);
-        if (httpSession == null) {
+        final CurrentUser currentUser = currentUser();
+        if (currentUser == null) {
             return Collections.emptyList();
         }
-        Object attribute = httpSession.getAttribute(SessionAttribute.SESSION_ATTR_PERMISSION);
-        if (attribute == null) {
-            return Collections.emptyList();
-        }
-        List<String> permissions = new ArrayList<>();
-        if (attribute instanceof Collection<?> collection) {
-            for (Object o : collection) {
-                permissions.add((String) o);
-            }
-        }
-        return permissions;
+        return List.copyOf(currentUser.getPermissionCodes());
     }
 
 }
